fix: layout issues with textboxes (IE9)
close #44

--- a/sites/all/themes/heybabies/sass/_forms.scss
+++ b/sites/all/themes/heybabies/sass/_forms.scss
@@ -27,6 +27,7 @@
         font-weight: 400;
         font-size: 1em;
         line-height: 2;
+        height: 36px;
         margin: 0;
         
         &.error
